@@ -15,5 +15,6 @@ class AddRTLMarker(Filter):
     def run(self, text, card, fact_key, **render_args):
         for i in range(len(text)):
             if 0x0590 <= ord(text[i]) <= 0x06FF:
-                return text + "&rlm;"
+                return text.replace("\n", "&rlm;\n").\
+                    replace("<br>", "&rlm;<br>") + "&rlm;"
         return text
