@@ -1,3 +1,8 @@
+-In cloze card types, you can now provide hints, e.g. [cloze:hint] will show
+ [hint] in the question as opposed to [...]
+-Further fixes for Hebrew (reported by Eliyahu Switzer).
+
+
 Mnemosyne 2.0 : 2012-06-16
 
 Four years in the making, this is essentially a complete rewrite of the old
